--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
